# newsletter

./: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  spec.yaml
.cargo/: config.toml
.github/workflows/: audit.yml  general.yml  prod.yaml
.sqlx/: query-03d1c66427936e5a18d10e254935b27f5170972421676e8316ec861658da1205.json  query-0790b0f5dcda680184bd4fa53f410ac629d88338eff23fa3d94c1f50f9b79b16.json  query-0c651cca9970e408cc9c8f7921901be1edc3c5df2bcb14bd3e6a9ac56ad847af.json  query-39f888a4d060ebcae7aaf8f65226a05eb2b535b60b6571a53e4cdc3272e4aa8e.json  query-3fc946a246823511017f0963d7c4e31733cf851e655ea8805025c44efb45bde9.json  query-45c9c7d312ee40cb43f8dff48b69aa1c2aa99402987870751131efd48e0e1cc5.json  query-a06999d07cbd62e282aef4a5821c9b9d4d02a3bf7d606fa7086901015869e549.json  query-b51cc1a2e7368b5f636fc770bcc67a6b311f02732461b024ce506dd078bae80d.json  query-dd1334b8d37af5e2f4c8ef7dd185946d75e6053ca712d6a7b39baaf51b2e46f0.json
configuration/: base.yaml  production.yaml
migrations/: 20240720120841_make_status_not_null_in_subscriptions.sql  20240812125914_add_salt_to_users.sql  20240825011631_seed_user.sql  20240831105442_create_idempotency_table.sql  20240831162605_create_issue_delivery_queue_table.sql
scripts/: init_redis.sh
src/: authentication.rs  configuration.rs  email_client.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs
src/authentication/: middleware.rs  password.rs
src/domain/: mod.rs  subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  persistence.rs
src/routes/: mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  logout.rs  mod.rs
src/routes/admin/newsletter/: post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/home/: home.html
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  newsletter.rs  subscription.rs  subscriptions_confirm.rs
