#! Cargo.toml
[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"
authors = ["Meann Sen senmeann@gmail.com"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
config = "0.14.0"
actix-web = "4.8.0"
tracing-actix-web = "0.7.11"
tokio = { version = "1.38.1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.204", features = ["derive"] }
uuid = { version = "1.10.0", features = ["v4"] }
chrono = "0.4.38"
tracing-log = "0.2.0"

tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = [
    "registry",
    "env-filter",
] }
tracing-bunyan-formatter = "0.3.9"
secrecy = { version = "0.8.0", features = ["serde"] }
serde-aux = "4.5.0"
unicode-segmentation = "1.11.0"
validator = { version = "0.18.1", features = ["derive"] }
reqwest = { version = "0.12.5", default-features = false, features = [
    "json",
    "rustls-tls",
] }

rand = { version = "0.8", features = ["std_rng"] }
thiserror = "1.0.63"
anyhow = "1.0.86"
base64 = "0.22.1"
sha3 = "0.10.8"
# Using table-like toml syntax to avoid a super-long line !
[dependencies.sqlx]
version = "0.8.0"
default-features = false
features = [
    "runtime-async-std-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]
[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
claim = "0.5.0"
fake = "2.9.2"
once_cell = "1.19.0"
wiremock = "0.6.0"
serde_json = "1.0.120"
linkify = "0.10.0"
