#! Cargo.tomltom
[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"
authors = ["Meann Sen senmeann@gmail.com"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
config = "0.14.1"
actix-web = "4.9.0"
tracing-actix-web = "0.7.16"
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.218", features = ["derive"] }
uuid = { version = "1.13.2", features = ["v4", "serde"] }
chrono = "0.4.39"
tracing-log = "0.2.0"

tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = [
    "registry",
    "env-filter",
] }
tracing-bunyan-formatter = "0.3.9"
secrecy = { version = "0.10.3", features = ["serde"] }
serde-aux = "4.5.0"
unicode-segmentation = "1.12.0"
validator = { version = "0.20.0", features = ["derive"] }
reqwest = { version = "0.12.9", default-features = false, features = [
    "json",
    "rustls-tls",
    "cookies",
] }

rand = { version = "0.8.5", features = ["std_rng"] }
thiserror = "2.0.11"
anyhow = "1.0.93"
base64 = "0.22.1"
argon2 = { version = "0.5.3", features = ["std"] }
urlencoding = "2.1.3"
htmlescape = "0.3.1"
hmac = { version = "0.12.1", features = ["std"] }
sha2 = "0.10.8"
hex = "0.4.3"
actix-web-flash-messages = { version = "0.5.0", features = ["cookies"] }
actix-session = { version = "0.10.1", features = ["redis-session-rustls"] }
serde_json = "1.0.140"
# Using table-like toml syntax to avoid a super-long line !
[dependencies.sqlx]
version = "0.8.2"
default-features = false
features = [
    "runtime-async-std-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]
[dev-dependencies]
serde_urlencoded = "0.7.1"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
claim = "0.5.0"
fake = "3.0.0"
once_cell = "1.20.2"
wiremock = "0.6.2"
linkify = "0.10.0"
