#! Cargo.tomltom
[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"
authors = ["Meann Sen senmeann@gmail.com"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
config = "0.15.13"
actix-web = "4.11.0"
tracing-actix-web = "0.7.19"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.219", features = ["derive"] }
uuid = { version = "1.18.0", features = ["v4", "serde"] }
chrono = "0.4.41"
tracing-log = "0.2.0"

tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.19", features = [
    "registry",
    "env-filter",
] }
tracing-bunyan-formatter = "0.3.10"
secrecy = { version = "0.10.3", features = ["serde"] }
serde-aux = "4.7.0"
unicode-segmentation = "1.12.0"
validator = { version = "0.20.0", features = ["derive"] }
reqwest = { version = "0.12.23", default-features = false, features = [
    "json",
    "rustls-tls",
    "cookies",
] }

rand = { version = "0.8.5", features = ["std_rng"] }
thiserror = "2.0.12"
anyhow = "1.0.99"
base64 = "0.22.1"
argon2 = { version = "0.5.3", features = ["std"] }
urlencoding = "2.1.3"
htmlescape = "0.3.1"
hmac = { version = "0.12.1", features = ["std"] }
sha2 = "0.10.9"
hex = "0.4.3"
actix-web-flash-messages = { version = "0.5.0", features = ["cookies"] }
actix-session = { version = "0.10.1", features = ["redis-session-rustls"] }
serde_json = "1.0.142"
# Using table-like toml syntax to avoid a super-long line !
[dependencies.sqlx]
version = "0.8.6"
default-features = false
features = [
    "runtime-async-std-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]
[dev-dependencies]
serde_urlencoded = "0.7.1"
quickcheck = "1.0.3"
quickcheck_macros = "1.1.0"
claim = "0.5.0"
fake = "3.0.0"
once_cell = "1.21.3"
wiremock = "0.6.5"
linkify = "0.10.0"
